[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Loading Screen.png" type="Texture" id=1]
[ext_resource path="res://UI/BlackBackground.jpg" type="Texture" id=2]
[ext_resource path="res://Scene/BackgroundMusic.tscn" type="PackedScene" id=3]
[ext_resource path="res://TittleScreen/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Font/pixeltype.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scene/LoadingScreen.gd" type="Script" id=6]
[ext_resource path="res://Music and Sounds/Musics/7 - Sad Theme.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "Loading"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/CenterContainer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background/CenterContainer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="Background/CenterContainer"]
margin_left = 74.0
margin_top = 25.0
margin_right = 118.0
margin_bottom = 38.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "Loading"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Background/CenterContainer"]
position = Vector2( 96, 48 )
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/CenterContainer"]
root_node = NodePath("../../..")
anims/Loading = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="BackgroundMusic" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
